<resources>
    <string name="app_name">Weather forecast</string>
    <string name="send_me_location">Select city</string>
    <string name="save_location">Save location</string>
    <string name="error_city_select">An error occurred while selecting a city.</string>
    <string name="please_select_city">Please select a city manually</string>
    <string name="auto_select_city">Auto select city ?</string>
    <string name="cloudy_cover">Cloudy cover</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="today">Today</string>
    <string name="updating">Edit</string>
    <string name="days">days</string>


</resources>